--- a/js.html
+++ b/js.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Omkareshwar Halli</h1>
-    <h2> Programmer </h2>
+    <p> Helloo</p>
 </body>
 </html>
